--- a/demo/package.json
+++ b/demo/package.json
@@ -1,17 +1,13 @@
 {
-    "name": "jw-react-npm-boilerplate",
+    "name": "jw-react-npm-boilerplate-demo",
     "version": "1.0.0",
-    "description": "React Boilerplate Component for npm",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/cornflourblue/react-npm-boilerplate"
-    },
-    "main": "./lib/BoilerplateComponent.js",
+    "description": "React Boilerplate Component Demo",
     "license": "MIT",
     "scripts": {
-        "build": "webpack"
+        "build": "webpack",
+        "start": "webpack-dev-server --open"
     },
-    "peerDependencies": {
+    "dependencies": {
         "prop-types": "^15.6.0",
         "react": "^16.0.0",
         "react-dom": "^16.0.0"
@@ -22,11 +18,10 @@
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.16.0",
         "babel-preset-stage-0": "^6.24.1",
+        "html-webpack-plugin": "^3.2.0",
         "path": "^0.12.7",
-        "prop-types": "^15.6.0",
-        "react": "^16.0.0",
-        "react-dom": "^16.0.0",
         "webpack": "^4.5.0",
-        "webpack-cli": "^2.0.14"
+        "webpack-cli": "^2.0.14",
+        "webpack-dev-server": "^3.1.3"
     }
 }
