--- a/demo/package.json
+++ b/demo/package.json
@@ -8,6 +8,7 @@
         "start": "webpack-dev-server --open"
     },
     "dependencies": {
+        "jw-react-npm-boilerplate": "^1.0.0",
         "prop-types": "^15.6.0",
         "react": "^16.0.0",
         "react-dom": "^16.0.0"
