--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jw-react-npm-boilerplate",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "React Boilerplate Component for npm",
     "homepage": "http://jasonwatmore.com/post/2018/04/14/react-npm-how-to-publish-a-react-component-to-npm",
     "keywords": [
@@ -18,21 +18,19 @@
         "build": "webpack"
     },
     "peerDependencies": {
-        "prop-types": "^15.6.0",
-        "react": "^16.0.0",
-        "react-dom": "^16.0.0"
+        "prop-types": "^15.6.2",
+        "react": "^16.4.1",
+        "react-dom": "^16.4.1"
     },
     "devDependencies": {
-        "babel-core": "^6.21.0",
-        "babel-loader": "^7.1.4",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-react": "^6.16.0",
-        "babel-preset-stage-0": "^6.24.1",
+        "@babel/core": "^7.1.2",
+        "@babel/preset-react": "^7.0.0",
+        "babel-loader": "^8.0.4",
         "path": "^0.12.7",
-        "prop-types": "^15.6.0",
-        "react": "^16.0.0",
-        "react-dom": "^16.0.0",
-        "webpack": "^4.5.0",
-        "webpack-cli": "^2.0.14"
+        "prop-types": "^15.6.2",
+        "react": "^16.4.1",
+        "react-dom": "^16.4.1",
+        "webpack": "^4.23.1",
+        "webpack-cli": "^3.1.2"
     }
 }
